.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/nested_enum_utils-0.2.3/tests/compile_fail/common_fields_unit.rs
use nested_enum_utils::common_fields;

#[common_fields({ x: u64 })]
enum Enum {
    A,
    B {},
}

fn main() {}
